add some infromations

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,2 +1,8 @@
 
-### Hello 
+<Heading type="h1">Cakebase</Heading>
+
+Cakebase is an asynchronous open source json database, allows you to store and process objects.
+
+Storing data is complex, it requires a lot of software and knowledge and of course time. However, when it comes to small projects or test environments, people are looking for a more effective solution. Cakebase should solve this problem.
+
+
