--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,8 +1,19 @@
+<div align="center">
+	<img
+		src="https://raw.githubusercontent.com/erwinkulasic/Cakebase/master/.github/assets/header.jpg"
+		width="800px"
+	/>
+</div>
 
-<Heading type="h1">Cakebase</Heading>
+<div align="center">
+
+<img alt="TRAVIS" src="https://img.shields.io/travis/erwinkulasic/cakebase?&logo=travis&color=df8&&style=flat-square">
+<img alt="NPM" src="https://img.shields.io/npm/dw/cakebase?color=000&logo=npm&style=flat-square">
+<img alt="GitHub issues" src="https://img.shields.io/github/issues/erwinkulasic/cakebase?color=000&logo=github&style=flat-square">
+<img alt="NPM" src="https://img.shields.io/github/license/erwinkulasic/cakebase?color=000&style=flat-square">
+
+</div>
 
 Cakebase is an asynchronous open source json database, allows you to store and process objects.
 
 Storing data is complex, it requires a lot of software and knowledge and of course time. However, when it comes to small projects or test environments, people are looking for a more effective solution. Cakebase should solve this problem.
-
-
