--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,18 +1,14 @@
-<div align="center">
-	<img
+<Image
 		src="https://raw.githubusercontent.com/erwinkulasic/Cakebase/master/.github/assets/header.jpg"
-		width="800px"
+		zoom
 	/>
-</div>
 
-<div align="center">
 
-<img alt="TRAVIS" src="https://img.shields.io/travis/erwinkulasic/cakebase?&logo=travis&color=df8&&style=flat-square">
-<img alt="NPM" src="https://img.shields.io/npm/dw/cakebase?color=000&logo=npm&style=flat-square">
-<img alt="GitHub issues" src="https://img.shields.io/github/issues/erwinkulasic/cakebase?color=000&logo=github&style=flat-square">
-<img alt="NPM" src="https://img.shields.io/github/license/erwinkulasic/cakebase?color=000&style=flat-square">
+<Image alt="TRAVIS" src="https://img.shields.io/travis/erwinkulasic/cakebase?&logo=travis&color=df8&&style=flat-square">
+<Image alt="NPM" src="https://img.shields.io/npm/dw/cakebase?color=000&logo=npm&style=flat-square">
+<Image alt="GitHub issues" src="https://img.shields.io/github/issues/erwinkulasic/cakebase?color=000&logo=github&style=flat-square">
+<Image alt="NPM" src="https://img.shields.io/github/license/erwinkulasic/cakebase?color=000&style=flat-square">
 
-</div>
 
 Cakebase is an asynchronous open source json database, allows you to store and process objects.
 
