fix for overview

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,5 +1,5 @@
 <Image src="https://raw.githubusercontent.com/erwinkulasic/Cakebase/master/.github/assets/header.jpg" zoom />
 
-Cakebase is an asynchronous open source json database, allows you to store and process objects.
+Cakebase is an asynchronous open source json database for nodejs, allows you to store and process objects.
 
 Storing data is complex, it requires a lot of software and knowledge and of course time. However, when it comes to small projects or test environments, people are looking for a more effective solution. Cakebase should solve this problem.
