fix for usage page

--- a/docs/usage.mdx
+++ b/docs/usage.mdx
@@ -1,7 +1,6 @@
 # Usage
 
 After you have successfully installed Cakebase you need to initialize it in your project.
-
 Note: when initializing Cakebase it checks if the JSON file exists, if not it will create one automatically.
 
 
@@ -10,12 +9,11 @@ this is the easiest way to initialize Cakebase using the following example:
 const cakebase = require('cakebase')('./data.json');
 ```
 
-It is also possible to initialize multiple files with Cakebase using the following example:
+It is also possible to initialize Cakebase with multiple files using the following example:
 ```javascript
 const cakebase = require('cakebase');
 
 const users = cakebase('./users.json');
 const sessions = cakebase('./sessions.json')
-
 ```
 
