--- a/docs/usage.mdx
+++ b/docs/usage.mdx
@@ -1,7 +1,10 @@
 # Usage
 
 After you have successfully installed Cakebase you need to initialize it in your project.
-Note: when initializing Cakebase it checks if the JSON file exists, if not it will create one automatically.
+
+<div style={{ borderRadius: '4px', color: '#8b949e', borderColor: '#1f6feb', border: '1px solid', backgroundColor: '#13233A', padding: '4px' }}>
+    Note: when initializing Cakebase it checks if the JSON file exists, if not it will create one automatically.
+</div>
 
 
 this is the easiest way to initialize Cakebase using the following example:
