--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -4,10 +4,26 @@
 />
 
 <div style={{ display: 'flex', justifyContent: 'center' }}>
-<img alt="TRAVIS" src="https://img.shields.io/travis/erwinkulasic/cakebase?&logo=travis&color=df8&&style=flat-square">
-<img alt="NPM" src="https://img.shields.io/npm/dw/cakebase?color=000&logo=npm&style=flat-square">
-<img alt="GitHub issues" src="https://img.shields.io/github/issues/erwinkulasic/cakebase?color=000&logo=github&style=flat-square">
-<img alt="NPM" src="https://img.shields.io/github/license/erwinkulasic/cakebase?color=000&style=flat-square">
+	<Image
+		alt="TRAVIS"
+		src="https://img.shields.io/travis/erwinkulasic/cakebase?&logo=travis&color=df8&&style=flat-square"
+		zoom
+	/>
+	<Image
+		alt="NPM"
+		src="https://img.shields.io/npm/dw/cakebase?color=000&logo=npm&style=flat-square"
+		zoom
+	/>
+	<Image
+		alt="GitHub issues"
+		src="https://img.shields.io/github/issues/erwinkulasic/cakebase?color=000&logo=github&style=flat-square"
+		zoom
+	/>
+	<Image
+		alt="NPM"
+		src="https://img.shields.io/github/license/erwinkulasic/cakebase?color=000&style=flat-square"
+		zoom
+	/>
 </div>
 
 Cakebase is a asynchronous json database for nodejs, allows you to store and process objects.
