add gap between badges

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -3,7 +3,7 @@
 	zoom
 />
 
-<div style={{ display: 'flex', justifyContent: 'center' }}>
+<div style={{ display: 'flex', justifyContent: 'center', gap: '0.5rem' }}>
 	<Image
 		alt="TRAVIS"
 		src="https://img.shields.io/travis/erwinkulasic/cakebase?&logo=travis&color=df8&&style=flat-square"
