--- a/docs/usage.mdx
+++ b/docs/usage.mdx
@@ -1,5 +1,7 @@
 # Usage
 
+
+## The initialization 
 After you have successfully installed Cakebase you need to initialize it in your project.
 
 <div
@@ -11,11 +13,13 @@ After you have successfully installed Cakebase you need to initialize it in your
 		border: '1px solid',
 		backgroundColor: '#13233A',
 		padding: '2px',
+        marginBottom: '12px!important'
 	}}
 >
 	Note: when initializing Cakebase it checks if the JSON file exists, if not
 	it will create one automatically.
 </div>
+
 
 this is the easiest way to initialize Cakebase using the following example:
 
